[package]
name = "zefer"
version = "1.5.0"
edition = "2021"

[lib]
name = "zefer"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.45.0" }
pyo3 = { version = "0.22.0", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.19.0", features = ["derive"] }
ahash = {version = "0.8"}
petgraph = { version = "0.7"}