[package]
name = "polars_graph"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars_graph"
path = "src/lib.rs"
crate-type = ["cdylib","lib"]

[dependencies]
ahash = {version = "0.8"}
petgraph = { version = "0.7"}
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py310"] }
pyo3-polars = {version = "0.23.1", features = ["derive"]}
polars-arrow = {version = "0.50.0"}
polars = {version = "0.50.0", features = ["dtype-struct", "ndarray"]}
thiserror = "2.0.12"
itertools = "0.14.0"
ordered-float = "5.1.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
debug = false
